clusters/talos-cluster/docling/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docling
  namespace: docling
spec:
  selector:
    app: docling
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
