clusters/talos-cluster/docling/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docling-route
  namespace: docling
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "docling.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: docling
          port: 80
